# lektor-polymorphic-type

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  lektor_deferred_type.py  lektor_polymorphic_type.py  setup.cfg  setup.py  tox.ini
tests/: conftest.py  test_functional.py  test_plugin.py
tests/test-site/content/about/: contents.lr
tests/test-site/models/: page.ini
tests/test-site/templates/: layout.html
