[metadata]
name = lektor-deferred-type
description = Add polymorphic field type to Lektor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-deferred-type
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
py_modules = lektor_deferred_type
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    deferred-type = lektor_deferred_type:DeferredTypePlugin

[bdist_wheel]
universal = 1
