[metadata]
name = lektor-polymorphic-type
description = Add polymorphic field type to Lektor
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-polymorphic-type
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = lektor_polymorphic_type
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    polymorphic-type = lektor_polymorphic_type:PolymorphicTypePlugin

[bdist_wheel]
universal = 1
